Fixed Center Spacing of Tea Items

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -103,7 +103,7 @@ nav a {
     display: inline-flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     margin-bottom: 100px;
 }
 
@@ -114,6 +114,7 @@ nav a {
 .img-container img {
     width: 300px;
     height: 200px;
+    margin: 0 20px;
 }
 
 /* Location Section */
